# ChangeLog for sys-fs/zfs
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-fs/cvs-repo/gentoo-x86/sys-fs/zfs/ChangeLog,v 1.31 2012/06/25 21:03:27 ryao Exp $

*zfs-0.6.0_rc9-r3 (25 Jun 2012)

  25 Jun 2012; Richard Yao <ryao@gentoo.org> +zfs-0.6.0_rc9-r3.ebuild,
  -zfs-0.6.0_rc9-r2.ebuild,
  files/zfs-0.6.0_rc9-range-lock-caller-allocate.patch:
  Fix additional deadlock fix regression

*zfs-0.6.0_rc9-r2 (25 Jun 2012)

  25 Jun 2012; Richard Yao <ryao@gentoo.org> +zfs-0.6.0_rc9-r2.ebuild,
  -zfs-0.6.0_rc9-r1.ebuild,
  files/zfs-0.6.0_rc9-range-lock-caller-allocate.patch:
  Fix regression caused by patch to fix deadlock

  25 Jun 2012; Richard Yao <ryao@gentoo.org>
  files/zfs-0.6.0_rc9-range-lock-caller-allocate.patch:
  Adjust patch to correspond to a working GIT branch

*zfs-0.6.0_rc9-r1 (25 Jun 2012)

  25 Jun 2012; Richard Yao <ryao@gentoo.org>
  +files/zfs-0.6.0_rc9-range-lock-caller-allocate.patch,
  +zfs-0.6.0_rc9-r1.ebuild:
  Fix swap deadlock involving zfs_range_lock() and zvols

  18 Jun 2012; Richard Yao <ryao@gentoo.org> zfs-0.6.0_rc9.ebuild,
  zfs-9999.ebuild:
  Keyword ~amd64

  17 Jun 2012; Richard Yao <ryao@gentoo.org>
  +files/zfs-0.6.0_rc9-remove-pfmalloc-1-of-3.patch,
  +files/zfs-0.6.0_rc9-remove-pfmalloc-2-of-3.patch,
  +files/zfs-0.6.0_rc9-remove-pfmalloc-3-of-3.patch,
  +files/zfs-0.6.0_rc9-use-pushpage.patch, zfs-0.6.0_rc9.ebuild:
  Replace PF_MEMALLOC with KM_PUSHPAGE to fix deadlock issues. This makes swap
  on zvols usable.

  17 Jun 2012; Richard Yao <ryao@gentoo.org> zfs-0.6.0_rc9.ebuild:
  Modify sys-kernel/spl dependency to permit revisions

  17 Jun 2012; Richard Yao <ryao@gentoo.org>
  +files/zfs-0.6.0_rc9-hardened-support.patch, zfs-0.6.0_rc9.ebuild,
  zfs-9999.ebuild:
  Support for sys-kernel/hardened-sources in 0.6.0-rc9, check for
  CONFIG_DEVTMPFS when USE=rootfs and miscellaneous style changes

*zfs-0.6.0_rc9 (16 Jun 2012)
