@@ -7,8 +7,8 @@ AUX zfs-0.6.0_rc9-remove-pfmalloc-3-of-3.patch 2593 RMD160 39225be53d081aad20ae9
 AUX zfs-0.6.0_rc9-use-pushpage.patch 38878 RMD160 16c6fd5ddbcba2961be21a1a640fcddd6a511499 SHA1 b5f4deec2bbe6c0d460591c743626d7d2f422348 SHA256 113d5fef727c34a3254f0556ade3d3f6b0d6069c20a2511dc4ae6409087f1b90
 AUX zfs-shutdown 1252 RMD160 449ba23e29486255bd04d54dfe11b77d414ba6d4 SHA1 108d271dfbe86df47f50a3219c5cf839efe4ce92 SHA256 cba63ddf086044c7e041c296ea86f68a1579ac830b8bea56b9f74b4204f96553
 DIST zfs-0.6.0-rc9.tar.gz 1989469 RMD160 fef1e4e4f0d122be60e3f5b8322e683b8981bac2 SHA1 fc14d86cd0124fd67d2ac80853f9ae078dee9a0d SHA256 a014475fab410caf209e99b448aeffe0070d1d9fc002fb33dd56f73dba87b1fd
-EBUILD zfs-0.6.0_rc9-r3.ebuild 3393 RMD160 0c58cffc1509dbdb879fabf90543a11feba2af8d SHA1 f5102b7ad587e79965e58a8d46afb5a4b4eea198 SHA256 493024e0ecf839c82addb8c7b83c3a00c421ba99da03447ce636ba733cad7bd2
+EBUILD zfs-0.6.0_rc9-r3.ebuild 3415 RMD160 88869a9262e951b1e5d1308c4bb65a5657858350 SHA1 0998ba87d772ccd4a7685d7bac183780e1b65baa SHA256 9ee9e35c22501f4916bf98bde742da4c3a71bedfaa01624f1f8a562a2c20c008
 EBUILD zfs-0.6.0_rc9.ebuild 3329 RMD160 fdce6cea007c9eb3074e8953194e1845b466488d SHA1 b1b81fa4e760b334c395a29f88342faf03939c60 SHA256 b862bc880a718a2507399af0f9189df4e398315c5df8514f8660df288a1c456d
-EBUILD zfs-9999.ebuild 3325 RMD160 989845cda4e6b4319b1cb5be9f9616ca22894a70 SHA1 7a2fcdaa941f3b71b06dd63d81dc8a8044739be9 SHA256 7d698455612b03abdd9fb5bca51d01870a28c09a2b9cdb22f2b9ab6b82b6a0e7
-MISC ChangeLog 5210 RMD160 2aa12814fdb3a470753f974fd427f8b174a3d4ff SHA1 0eb0816f2c14277e3ff981e6cea48a33d4e29a94 SHA256 5d8f0766de55f2539306d6cbbf3ca855f8403282424d1f840fba6b0401d18e60
+EBUILD zfs-9999.ebuild 3408 RMD160 afde50dada70dd4b47032a99185f5858a16c36ab SHA1 4535df1dddfbdd39d260de32f6331f8503b275a1 SHA256 f981fc5dd2496a26b9bc46bd879398c9db3359c9ac2517aaf05681d2c3774169
+MISC ChangeLog 5342 RMD160 dd072c9e79d84cb6c7836928c51ffa49e594b471 SHA1 f2f3f66ee5e516c64f24c95662829f02f29356d9 SHA256 9b99a1669edd2bc9ae883669d64af28d0f69a6ecb793882af9eaedf786ce2b27
 MISC metadata.xml 460 RMD160 49a38cd6f7fb8464c06282672932cb5930e024b2 SHA1 2cb49a2c9bd0c05ee136ead608d7ae9a50663384 SHA256 4f32c18bfc4d75883f198b1166ad4f5d7a95deb11eca99d476f305ed31875e7d
