@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-fs/cvs-repo/gentoo-x86/sys-fs/zfs/Attic/zfs-0.6.0_rc9-r3.ebuild,v 1.1 2012/06/25 21:03:27 ryao Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-fs/cvs-repo/gentoo-x86/sys-fs/zfs/Attic/zfs-0.6.0_rc9-r3.ebuild,v 1.2 2012/06/25 21:19:41 ryao Exp $
 
 EAPI="4"
 
@@ -64,7 +64,9 @@ pkg_setup() {
 		MODULES
 		ZLIB_DEFLATE
 		ZLIB_INFLATE"
-	use rootfs && CONFIG_CHECK="${CONFIG_CHECK} DEVTMPFS"
+	use rootfs && \
+		CONFIG_CHECK="${CONFIG_CHECK} BLK_DEV_INITRD
+			DEVTMPFS"
 	kernel_is ge 2 6 26 || die "Linux 2.6.26 or newer required"
 	check_extra_config
 }
